--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-mongo-sanitize": "^2.1.0",
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
